src/test/ui/associated-types/hr-associated-type-bound-param-4.stderr
error[E0277]: the trait bound `for<'b> <(T,) as X<'b, T>>::U: std::clone::Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-param-4.rs:13:14
   |
LL | trait X<'a, T>
   |       - required by a bound in this
...
LL |     for<'b> <(T,) as X<'b, T>>::U: Clone,
   |                                    ----- required by this bound in `X`
...
LL |     type U = str;
   |              ^^^ the trait `for<'b> std::clone::Clone` is not implemented for `<(T,) as X<'b, T>>::U`
   |
   = help: the following implementations were found:
             <&T as std::clone::Clone>
             <&mut T as std::clone::Clone>

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
